fix: sync PipePipe updates and remove remaining deprecations